crates/monochange_integration_tests/tests/snapshots/comment_released_issues__auto_close_closes_closing_keyword_issues_and_keeps_plain_mentions_open.snap
---
source: crates/monochange_integration_tests/tests/comment_released_issues.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
command `step comment-released-issues` completed
